[package]
name = "docker-image-reference"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Parse docker image references"
homepage = "https://github.com/mzohreva/docker-image-reference"
documentation = "https://docs.rs/docker-image-reference"
repository = "https://github.com/mzohreva/docker-image-reference"
readme = "README.md"

[dependencies]
anyhow = "1.0"
const_format = "0.2"
lazy_static = "1.4"
regex = "1.0"
