[package]
name = "docker-image-reference"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Parse docker image references"
homepage = "https://github.com/mzohreva/docker-image-reference"
documentation = "https://docs.rs/docker-image-reference"
repository = "https://github.com/mzohreva/docker-image-reference"
readme = "README.md"

[dev-dependencies]
pretty_env_logger = "0.4.0"
ctor = "0.1.26"


[dependencies]
anyhow = "1.0"
const_format = "0.2"
lazy_static = "1.4"
regex = "1.0"
log = "0.4.17"